package com.example.psoft25_1221392_1211686_1220806_1211104.appointmentmanagement.model;

public enum AppointmentStatus {
    SCHEDULED,
    COMPLETED,
    CANCELLED,
    RESCHEDULED
}
